// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Literals Array of literals 1`] = `
"FROM:
type Test = [1, 2, 3, \\"hello\\", \\"world\\"];

--------------------------------------------------------
TO:
'use strict';
exports.__esModule = true;
var runtime_1 = require('@manta-style/runtime');
var Test = runtime_1['default'].TypeAliasDeclaration(
  'Test',
  function(typeFactory) {
    var type = runtime_1['default'].TupleType([
      runtime_1['default'].Literal(1),
      runtime_1['default'].Literal(2),
      runtime_1['default'].Literal(3),
      runtime_1['default'].Literal('hello'),
      runtime_1['default'].Literal('world'),
    ]);
    return type;
  },
  runtime_1['default'].MantaAnnotation(''),
);
"
`;

exports[`Literals Booleans 1`] = `
"FROM:
type Test = true;

--------------------------------------------------------
TO:
'use strict';
exports.__esModule = true;
var runtime_1 = require('@manta-style/runtime');
var Test = runtime_1['default'].TypeAliasDeclaration(
  'Test',
  function(typeFactory) {
    var type = runtime_1['default'].Literal(true);
    return type;
  },
  runtime_1['default'].MantaAnnotation(''),
);
"
`;

exports[`Literals Booleans 2`] = `
"FROM:
type Test = false;

--------------------------------------------------------
TO:
'use strict';
exports.__esModule = true;
var runtime_1 = require('@manta-style/runtime');
var Test = runtime_1['default'].TypeAliasDeclaration(
  'Test',
  function(typeFactory) {
    var type = runtime_1['default'].Literal(false);
    return type;
  },
  runtime_1['default'].MantaAnnotation(''),
);
"
`;

exports[`Literals Numbers 1`] = `
"FROM:
type Test = 1;

--------------------------------------------------------
TO:
'use strict';
exports.__esModule = true;
var runtime_1 = require('@manta-style/runtime');
var Test = runtime_1['default'].TypeAliasDeclaration(
  'Test',
  function(typeFactory) {
    var type = runtime_1['default'].Literal(1);
    return type;
  },
  runtime_1['default'].MantaAnnotation(''),
);
"
`;

exports[`Literals Strings 1`] = `
"FROM:
type Test = \\"test\\";

--------------------------------------------------------
TO:
'use strict';
exports.__esModule = true;
var runtime_1 = require('@manta-style/runtime');
var Test = runtime_1['default'].TypeAliasDeclaration(
  'Test',
  function(typeFactory) {
    var type = runtime_1['default'].Literal('test');
    return type;
  },
  runtime_1['default'].MantaAnnotation(''),
);
"
`;
